[package]
name = "rust-socketio"
version = "0.1.0"
edition = "2021"
authors = ["Phongpisut Meemuk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.114"
socketioxide = { version = "0.10.2", features = ["state"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = "1.0.197"
axum = "0.7.4"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["auth", "cors"] }
